Fixed a bug with footer layout on small screens

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -94,9 +94,11 @@ footer{
   height: 100vh;
   color: white;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 footer h1{
-  padding-top: 40%;
   font-size: 48px;
 
   
@@ -109,8 +111,10 @@ footer h1{
 
 #social{
   margin: 60px 40px;
+
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   font-weight: 800;
 }
 #social a:hover{
